package PAI.domain;

public class Address {

    private String _street;
    private String _postalCode;
    private String _city;
    private String _country;

}
