package PAI.dto.department;

public record DepartmentDTO(
            String id,
            String name,
            String acronym
    ) {}

